# games-box

./: .env  .gitignore  LICENSE  Procfile  README.md  pyproject.toml  requirements.in  requirements.txt  tox.ini  update-dependencies.sh
application/: __init__.py  __main__.py  constants.py
application/games/common/: __init__.py  database.py  player.py  routes.py  word_manager.py
application/scrambledwords/data/: game_manager.py  game_state.py  game_update.py  scoring.py  scoring_type.py  word_manager.py
application/scrambledwords/networking/: __init__.py  events.py  routes.py
application/scrambledwords/util/: time_util.py
application/static/common/: common.css
application/static/crosswordcreator/: game.css  game.js  home.js  index.css  words.txt
application/static/hiddennames/: game.css  game.js  index.css  words.txt
application/static/scorekeeper/: game.css  index.css
application/static/scrambledwords/: game.css  game.js  words.txt
application/templates/: game.html  index.html  scoring.html
application/templates/common/: base.html  index.html  new_player.html
application/templates/crosswordcreator/: game.html  index.html
application/templates/hiddennames/: game.html  index.html
application/templates/scorekeeper/: game.html  index.html
application/templates/scrambledwords/: game.html  head.html  index.html  scoring.html
config/: gunicorn.conf.py
tests/games/common/: test_word_manager.py
tests/games/crosswordcreator/: test_board.py  test_tiles.py
tests/scrambledwords/data/: test_game_state.py  test_scoring.py  test_word_manager.py
(+27 files in other folders)
