[tool.poetry]
name = "games-box"
version = "0.1.0"
description = ""
authors = ["Tyler Yates <5478568+Tyler-Yates@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.2"
gunicorn = "^20.1.0"
Flask-SocketIO = "^5.1.1"
# Need to wait for https://github.com/benoitc/gunicorn/pull/2581 to release
eventlet = "0.30.2"
pymongo = "^3.12.1"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]
tox = "^3.24.4"
black = "^21.11b1"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
